# Filefly

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  main.py  pyproject.toml  requirements.txt
backend/: app.py  config.json  main.py
filefly/: app.py  main.py  runtime_status.json
filefly/static/: script.js  styles.css
filefly/templates/: index.html
filefly_files.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
logs/: week1.md  week2.md  week3.md  week4.md  week5.md
logs/devlogs/: v0.2.0-alpha1.md  week1.md  week3.md
src/filefly/: __main__.py  app.py  cli.py  config.json  inspect_data.py  logging_config.py  main.py  reporter.py  runtime_status.json  storage.py  telemetry.py
web/: app.py  main.py  runtime_status.json
web/static/: script.js  styles.css
web/templates/: index.html
