[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filefly-files"
version = "0.2.0a2"
description = "An automated daemon for file management/extraction and file behavior analysis."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

authors = [
  { name = "Yodahe Wondimu" }
]

dependencies = [
    "watchdog",
    "py7zr",
    "flask",
]

[project.urls]
Homepage = "https://github.com/YodaheWondimu/Filefly"
Repository = "https://github.com/YodaheWondimu/Filefly"

[project.optional-dependencies]
analysis = [
    "matplotlib",
    "pandas",
]

# CLI script: installs 'filefly' command
[project.scripts]
filefly = "filefly.main:main"

# Tell setuptools where to find your packages
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["filefly"]

[tool.setuptools.package-data]
filefly = [
    "config.json",
    "runtime_status.json",
    "templates/*",
    "static/*"
]
